ST-1158 JVM parameter add for JAVA 17